styles/main.css
:root{
    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; 
}

body{
    background-color: #1d1d1d; 
}
.wrapper{
    display:flex;
    flex-direction: row;
    height: inherit;
    padding-bottom: 20px;
}

.sidebar{
    position: sticky;
    position: -webkit-sticky;
    font-family: "Poppins", sans-serif;
    flex:1.2;
    background: #444444;
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.8);
    margin-top: 20px;
    margin-left: 20px;
    top:0;
    border-radius: 5px;
    text-align: center;
    color: whitesmoke;
    align-self: flex-start;
}
.right-wrapper{
    flex:5;
    display: flex;
    flex-direction: column;
    padding-top: 20px;
    padding-right: 20px;
}
.nav-bar{
    background: #3d3d3d;
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.8);
    padding:10px;
    height: 50px;
    overflow: hidden;
    margin-left: 20px;
    border-radius: 5px;
    color:white;
}

.nav-bar button{
    border: none;
    background-color: inherit;
    box-shadow: none;
    font-size: 20px;
    cursor: pointer;
    display: inline-block;
}

.nav-bar button:hover{
    color: black;
}
.main{
    height: inherit;
    width: inherit;
    display: flex;
    flex-direction: row;
    flex: 3;
    font-family: sans-serif;
    margin-top: 20px;
    margin-left: 20px;
    border-radius: 5px;
    transition: 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
    text-align: center;
    color: whitesmoke;
}
.sub{
    font-family: sans-serif;
    width: inherit;
    height: inherit;
    display: flex;
    flex-direction: row;
    margin-left: 20px;
    margin-top: 20px;
    align-items: flex-start;
}
.content{
height: inherit;
width: inherit; 
}

.contentp{
   display: none;
height: inherit;
width: inherit; 
}

.info-wrapper{
    margin-right: 15px;
    border-radius: 5px;
    flex: 3;
}
.info-table {
    background: #363636;
    padding:20px;
    width: 100%;
    height: inherit;
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.8);
    color: #fff;
    border-radius: 5px;
    text-align: center;
  }
.info-table th, td{
    padding: 5px;
}
.info-table th, td::before {
      color: white;
}
.schedule {
    text-align: left;
    color: white;
    background: #363636;
    padding: 20px;;
    border-radius: 5px;
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.8);
}
.holder{
    flex:3;
    background: #1d1d1d;
    display: flex;
    flex-direction: column;
}
.add-resources {
    
    padding: 20px;
    margin-top: 20px;
    border-radius: 5px;
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.8);
    background: #363636;
    color: white;
}

a {
    color: rgb(0, 153, 255);
}

